force-app/main/default/objects/POC_Forecasting__c/POC_Forecasting__c.object-meta.xml
<CustomObject>
    <description>Used to track and forecast POCs</description>
    <label>POC Forecasting</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>