force-app/main/default/objects/POC_Forecasting__c/fields/Estimated_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Install_Date__c</fullName>
    <label>Estimated Install Date</label>
    <type>Date</type>
</CustomField>