force-app/main/default/objects/POC_Forecasting__c/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>POCs</relationshipName>
    <type>Lookup</type>
</CustomField>