force-app/main/default/objects/POC_Forecasting__c/fields/POC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>POC_Quantity__c</fullName>
    <label>POC Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>