force-app/main/default/objects/POC_Forecasting__c/fields/POC_SKUs__c.field-meta.xml
<CustomField>
    <fullName>POC_SKUs__c</fullName>
    <label>POC SKUs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RBK-334-01</fullName>
            </value>
            <value>
                <fullName>RBK-344-01</fullName>
            </value>
            <value>
                <fullName>RBK-348-01</fullName>
            </value>
            <value>
                <fullName>RBK-528-01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>